# SwiftDocs

./: .env.example  .gitignore  README.md  build-log.txt  docker-compose.yml  fix_documents.py  railway.toml
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/models/: models.py
backend/app/routes/: auth.py  billing.py  documents.py  templates.py  webhooks.py
engine/: Cargo.toml  payload.json
engine/src/: main.rs  pdf.rs  types.rs
engine/src/templates/: catalogue.rs  invoice.rs  letter.rs  mod.rs  price_schedule.rs  spec_sheet.rs
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/generate/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/lib/: api.ts  store.ts
