[package]
name    = "swiftdocs_engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "swiftdocs_engine"
path = "src/main.rs"

[dependencies]
printpdf   = "=0.5.3"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
base64     = "0.22"
chrono     = { version = "0.4", features = ["serde"] }
clap       = { version = "4", features = ["derive"] }
image      = "0.25"
rayon      = "1"

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
strip     = true